# role-manager

./: .gitignore  Cargo.toml  README.md  official-roles-24-06-01.json5  official-roles-24-10-28.json5  official-roles-25-10-28.json5  rustfmt.toml
benches/: analyzer.rs
src/: bot.rs  config.rs  error.rs  lib.rs  main.rs  multikey_hashmap.rs  server.rs
src/analyzer/: mod.rs  role_definition.rs  user.rs
src/boards/: cm.rs  mod.rs
src/boards/cm/: active_profiles.rs  aggregate.rs  mod.rs  profile.rs
src/boards/srcom/: category.rs  game.rs  leaderboard.rs  level.rs  mod.rs  platform.rs  region.rs  run.rs  user.rs  variable.rs
src/commands/: analysis.rs  mod.rs
src/model/: mod.rs
src/model/lumadb/: channels.rs  donor_roles.rs  dunce_instants.rs  dunce_stored_roles.rs  filters.rs  manual_role_assignments.rs  mod.rs  nodes.rs  permissions.rs  pin_blacklist.rs  pin_notifications.rs  ping_counts.rs  ping_leaderboard.rs  pinned_messages.rs  prelude.rs  render_results.rs  servers.rs  spam_keywords.rs  tracked_streams.rs  user_connection_attempts.rs  user_records.rs  users.rs  verified_connections.rs  vote_keys.rs  warnings.rs
