[package]
name = "role-manager"
version = "0.1.0"
edition = "2021"


[dependencies]

tokio = { version = "1" }

serde = { version = "1", features = ["derive"] }
json5 = "0"
toml = "0"

sea-query = { version = "0" }
sea-orm = { version = "0", default-features = false, features = [ "sqlx-mysql", "runtime-tokio-rustls", "debug-print", "macros" ] }
poise = "0"

reqwest = "0"

serenity = { version = "0", default-features = false, features = ["client", "gateway", "cache", "rustls_backend", "model", "unstable_discord_api"] }

tracing = "0"
tracing-subscriber = "0"
