[package]
name = "role-manager"
version = "0.1.0"
edition = "2021"


[dependencies]

tokio = { version = "1" }

chrono = "0"
speedate = "0"

serde = { version = "1", features = ["derive"] }
json5 = "0"
toml = "0"

sea-query = { version = "0" }
sea-orm = { version = "0", default-features = false, features = [ "sqlx-mysql", "runtime-tokio-rustls", "debug-print", "macros" ] }

reqwest = "0"
tower = { version = "0", features = ["full"] }
urlencoding = "2"

serenity = { version = "0", default-features = false, features = ["client", "gateway", "cache", "rustls_backend", "model", "unstable_discord_api"] }
poise = "0"

tracing = "0"
tracing-subscriber = "0"
