[package]
name = "role-manager"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]

tokio = { version = "1", features = [ "rt-multi-thread", "signal" ] }

chrono = "0.4"
speedate = "0.14"

serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
json5 = "0.4"
toml = "0.8"

sea-query = { version = "0.30" }
sea-orm = { version = "0.12", default-features = false, features = [ "sqlx-mysql", "runtime-tokio-rustls", "debug-print", "macros", "with-chrono" ] }

reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.4", features = ["full"] }
urlencoding = "2"

serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "cache", "rustls_backend", "model", "unstable_discord_api"] }
poise = "0.6"

tracing = "0.1"
tracing-subscriber = "0.3"
